--- a/src/main/resources/templates/school/lecture/list.html
+++ b/src/main/resources/templates/school/lecture/list.html
@@ -14,7 +14,7 @@
 <body onload="autoReload();">
 	<div class="container">
 	 <div th:include="/main/header.html"></div>
-	 
+	<!--<span th:text="${session.user.id}+'님이 로그인하였습니다.'"></span><span th:text="${session.user.id}+'('+${session.user.name}+')님이 로그인하였습니다.'"></span>-->	 
 	<!--상단배너-->
 		<div class="container p-5 my-5 border">
 		  <h1 style="font-weight: bold;  color: #43a06f;">강연</h1>
