--- a/src/main/resources/templates/school/education/detail.html
+++ b/src/main/resources/templates/school/education/detail.html
@@ -6,22 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-    
 <link rel="stylesheet" href="/css/styles.css">
 <link rel="stylesheet" href="/css/main/style.css">
 <link rel="stylesheet" href="/css/education/education.css">
 <link rel="stylesheet" href="/css/education/detail.css">
-
-<meta name="description">
-<meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-<meta name="generator" content="Hugo 0.84.0">
-<link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/blog/">
-<!-- Bootstrap core CSS -->
-<link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
-<!-- Custom styles for this template -->
-<link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
-<!-- Custom styles for this template -->
-<link href="blog.css" rel="stylesheet">
+<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+<meta name="_csrf" th:content="${_csrf.token}"/>
 </head>
 <body>
 <div class="container">
@@ -65,15 +55,16 @@
 				  <p>교육 관련 후기를 남겨주세요:)</p>            
 				<br />
 				
-				  <form id="comment" action="">
+				  <form id="comment" action="" th:if="${session.u}" sec:authorize="isAuthenticated()">
+					  <input type="hidden" id="eduNO" th:value="${e.eduNO}" />
 					  <input type="text" name="content"	id="content" size="50" />
 					  <button id="btnReply" class="btn custom-btn" style="background-color : #58b483;">등록</button>
 				  </form>
 				
-			    <div class="comments">
-		 			 <!-- 댓글 내용은 JavaScript로 동적으로 추가할 예정 -->
+				  	<div id="comments" name="comments" style="width: 100%;">
+					</div>
 				</div>
-		  	</div>
+			
 	        </article>
 			  
 			  
@@ -227,12 +218,13 @@
 	      		<div>[<span  style="font-weight: bold;" th:text="${e.eduStatus}"></span>] <span  style="font-weight: bold;" th:text="${e.eduName}"></span></div>
 				<br />
 	           <div class="row">
-	          <div class="col"><p class="mb-0" style="color: #43a06f; font-weight: bold;"> 가격문의 </p></div>
-	          <div class="col">
-				   <a th:onclick="'changeImage(' + ${e.eduNO} + ')'"  style="margin-left: 100px;">
-	               <img th:id="${e.eduNO}" src="/images/education/whiteHeart.jpg" style="width:28px" /></a>
-	          </div>	          
-	        </div>
+	      		<div class="col"><p class="mb-0" style="color: #43a06f; font-weight: bold;"> 가격문의 </p></div>
+		        <div class="col" th:if="${session.u}" sec:authorize="isAuthenticated()">
+				    <a th:onclick="'likeOrUnlike(\'' + ${e.eduNO} + '\'); return false;'" style="margin-left: 100px;">
+				        <img th:id="${e.eduNO}" th:src="${e.liked ? '/images/education/redHeart.jpg' : '/images/education/whiteHeart.jpg'}" style="width:28px" />
+				    </a>
+				</div>	          
+	        	</div>
 	        </div>
 	        
 	        
@@ -262,13 +254,12 @@
 
 	<div th:include="/main/footer.html"></div>
 </div>
-  <script src="/js/education/education.js"></script> 
-  <script src="/js/education/detail.js"></script>  
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
- 
   </body>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script type="text/javascript"  src="/js/education/education.js"></script> 
+<script type="text/javascript"  src="/js/education/detail.js"></script>  
+<script type="text/javascript" src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script type="text/javascript">
 </html>
