[Wearth1.0] orders->mypage 클래스명 변경, addr/couponvo 수정 0810

--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -238,7 +238,7 @@
 				</ul>
 				<ul class="nav flex-column">쇼핑
 					<li class="nav-item"><a class="nav-link" href="/mypage/shopping/list">주문내역</a></li>
-					<li class="nav-item"><a class="nav-link" href="">관심 상품</a></li>
+					<li class="nav-item"><a class="nav-link" href="/mypage/shopping/liked">관심 상품</a></li>
 				</ul>
 
 
