--- a/src/main/resources/templates/school/education/detail.html
+++ b/src/main/resources/templates/school/education/detail.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">"
+<html>
 <head>
 <title>교육 상세페이지</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    
 <link rel="stylesheet" href="/css/styles.css">
 <link rel="stylesheet" href="/css/main/style.css">
 <link rel="stylesheet" href="/css/education/education.css">
 <link rel="stylesheet" href="/css/education/detail.css">
-<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-<meta name="_csrf" th:content="${_csrf.token}"/>
+
+<meta name="description">
+<meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+<meta name="generator" content="Hugo 0.84.0">
+<link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/blog/">
+<!-- Bootstrap core CSS -->
+<link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="blog.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -24,7 +34,7 @@
 	    <div class="col-md-8">
 			
 			<!-- 상세 메인이미지 -->
-			<article class="blog-post"><img class="detailImg" th:src="@{'/images/education/'+${e.eduFile}}" ><br />
+			<article class="blog-post"><img class="detailImg" src="/images/education/edu20.jpg" ><br />
 			</article>
 			
 			<!-- 그룹 버튼 -->
@@ -43,11 +53,56 @@
 			<!-- 상세 -->
 		    <article class="blog-post">
 			<div  id="detail" class="content">
-		         <img class="img-fluid" th:src="@{'/images/education/detail/'+${e.eduDetailFile}}"  />
+		        <h2 class="blog-post-title" style="text-align: center;">위얼스학교 X 송하텃밭정원연구소</h2>
+		        <p class="blog-post-meta" style="text-align: center;">"순환하는 지구텃밭" </p>
+		        <p style="text-align: center; margin-bottom: 50px;">순환하는 송하 텃밭정원 연구소와 함께 최대한 인위적인 젓을 줄인 자연스러운 텃밭 농사를 꾸려갑니다. 토종씨앗, 음식 부산물로 퇴비 만들기 등 흙을 살리는 방법으로 텃밭을 만들어갑니다.</p>
+		        <hr>
+		 		<h2>Heading</h2>
+		        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+		        <br />
+		        <h3>Sub-heading</h3>
+		        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+		        <pre><code>Example code block</code></pre>
+		        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
+			<br />
+	       <h3>Example table</h3>
+	        <table class="table">
+	          <thead>
+	            <tr>
+	              <th>Name</th>
+	              <th>Upvotes</th>
+	              <th>Downvotes</th>
+	            </tr>
+	          </thead>
+	          <tbody>
+	            <tr>
+	              <td>Alice</td>
+	              <td>10</td>
+	              <td>11</td>
+	            </tr>
+	            <tr>
+	              <td>Bob</td>
+	              <td>4</td>
+	              <td>3</td>
+	            </tr>
+	            <tr>
+	              <td>Charlie</td>
+	              <td>7</td>
+	              <td>9</td>
+	            </tr>
+	          </tbody>
+	          <tfoot>
+	            <tr>
+	              <td>Totals</td>
+	              <td>21</td>
+	              <td>23</td>
+	            </tr>
+	          </tfoot>
+	        </table>
 			</div>
 			 </article>
 			 
-         		<!-- 후기 -->
+       		<!-- 후기 -->
 	        <article class="blog-post">
 		  	<div  id="review" class="content" style="display: none;">
 			 	<br />
@@ -55,18 +110,17 @@
 				  <p>교육 관련 후기를 남겨주세요:)</p>            
 				<br />
 				
-				  <form id="comment" action="" th:if="${session.u}" sec:authorize="isAuthenticated()">
-					  <input type="hidden" id="eduNO" th:value="${e.eduNO}" />
+				  <form id="comment" action="">
 					  <input type="text" name="content"	id="content" size="50" />
 					  <button id="btnReply" class="btn custom-btn" style="background-color : #58b483;">등록</button>
 				  </form>
 				
-				  	<div id="comments" name="comments" style="width: 100%;">
-					</div>
+			    <div class="comments">
+		 			 <!-- 댓글 내용은 JavaScript로 동적으로 추가할 예정 -->
 				</div>
-			
+		  	</div>
 	        </article>
-	
+			  
 			  
 			 <!-- 문의 -->
 			 <article class="blog-post">
@@ -168,7 +222,7 @@
 			                <td>환불관련문의드립니다.</td>
 			                <td>Doe</td>
 			                <td>2023-07-13</td>
-			            </tr> 
+			            </tr>
 			            <tr id="details2" class="collapse">
 			                <td colspan="4" class="post-details">
 			                    <label for="password2">비밀번호를 입력하세요:</label>
@@ -215,30 +269,26 @@
 			  
 			<!-- 제목, 가격 --> 
 	        <div class="p-4 mb-3 bg-white rounded" style="border: 1px solid lightgrey;">
-	      		<div>[<span  style="font-weight: bold;" th:text="${e.eduStatus}"></span>] <span  style="font-weight: bold;" th:text="${e.eduName}"></span></div>
-				<br />
+	      		<h4 class="fst-basic">[모집중] 순환하는 텃밭가꾸기 
+				</h4>
 	           <div class="row">
-	      		<div class="col"><p class="mb-0" style="color: #43a06f; font-weight: bold;"> 가격문의 </p></div>
-		        <div class="col" th:if="${session.u}" sec:authorize="isAuthenticated()">
-				    <a th:onclick="'likeOrUnlike(\'' + ${e.eduNO} + '\'); return false;'" style="margin-left: 100px;">
-				        <img th:id="${e.eduNO}" th:src="${e.liked ? '/images/education/redHeart.jpg' : '/images/education/whiteHeart.jpg'}" style="width:28px" />
-				    </a>
-				</div>	          
-	        	</div>
+	          <div class="col"><p class="mb-0" style="color: #43a06f; font-weight: bold;"> 가격문의 </p></div>
+	           <div class="col"><a href="#" onclick="changeImage('2')" style="margin-left: 100px;"><img id="2" src="/images/education/whiteHeart.jpg" style="width:28px;" /></a></div>
 	        </div>
-	        
+	        </div>
 	        
 	        <!-- 요약 --> 
 	        <div class="p-4">
 	          <ol class="list-unstyled mb-0">
 				<li style="font-weight: bold;">내용</li>
-	            <li th:text="${e.eduContent}"></li>
-	            <li style="font-weight: bold;">교육대상</li>
-	            <li th:text="${e.eduApp}"></li>
-	            <li style="font-weight: bold;">출처</li>
-	            <li th:text="${e.educator}"></li>
-	            <li style="font-weight: bold;">작성날짜</li>
-	            <li th:text="${e.eduSysdate}"></li>
+	            <li>순환하는 송하 텃밭정원 연구소와 함께 최대한 인위적인 젓을 줄인 자연스러운 텃밭 농사를 꾸려갑니다. 
+					토종씨앗, 음식 부산물로 퇴비 만들기 등 흙을 살리는 방법으로 텃밭을 만들어갑니다.</li>
+				<li style="font-weight: bold;">날짜</li>	
+	            <li>2023년 7월 26일</li>
+	            <li style="font-weight: bold;">인원</li>
+	            <li>20명</li>
+	            <li style="font-weight: bold;">장소</li>
+	            <li>남태령 산적마을농장</li>
 	          </ol>
 	        </div>
 	        
@@ -246,7 +296,7 @@
 			<div class="p-4">
 	       		<a class="btn custom-btn" style="width: 320px; " href="/school/education/insert">신청하기</a>
 			</div>
-	      </div>
+			
 	      </div>
 	    </div>
 	    
@@ -254,12 +304,13 @@
 
 	<div th:include="/main/footer.html"></div>
 </div>
+  <script src="/js/education/education.js"></script> 
+  <script src="/js/education/detail.js"></script>  
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+ 
   </body>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script type="text/javascript"  src="/js/education/education.js"></script> 
-<script type="text/javascript"  src="/js/education/detail.js"></script>  
-<script type="text/javascript" src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script type="text/javascript">
 </html>
