--- a/src/main/resources/templates/school/trainingRequest/detailAdmin.html
+++ b/src/main/resources/templates/school/trainingRequest/detailAdmin.html
@@ -15,7 +15,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.2.0/sweetalert2.all.min.js"></script>
-<script src="/js/education/trainingRequest.js"></script>
+<script src="/js/education/Request3.js"></script>
 
 </head>
 <body>
